@@ -1,0 +1,122 @@
+/*
+ *
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+ * 
+ * Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+ * 
+ * The contents of this file are subject to the terms of either the GNU
+ * General Public License Version 2 only ("GPL") or the Common Development
+ * and Distribution License("CDDL") (collectively, the "License").  You
+ * may not use this file except in compliance with the License. You can obtain
+ * a copy of the License at https://jersey.dev.java.net/CDDL+GPL.html
+ * or jersey/legal/LICENSE.txt.  See the License for the specific
+ * language governing permissions and limitations under the License.
+ * 
+ * When distributing the software, include this License Header Notice in each
+ * file and include the License file at jersey/legal/LICENSE.txt.
+ * Sun designates this particular file as subject to the "Classpath" exception
+ * as provided by Sun in the GPL Version 2 section of the License file that
+ * accompanied this code.  If applicable, add the following below the License
+ * Header, with the fields enclosed by brackets [] replaced by your own
+ * identifying information: "Portions Copyrighted [year]
+ * [name of copyright owner]"
+ * 
+ * Contributor(s):
+ * 
+ * If you wish your version of this file to be governed by only the CDDL or
+ * only the GPL Version 2, indicate your decision by adding "[Contributor]
+ * elects to include this software in this distribution under the [CDDL or GPL
+ * Version 2] license."  If you don't indicate a single choice of license, a
+ * recipient has the option to distribute your version of this file under
+ * either the CDDL, the GPL Version 2 or to extend the choice of license to
+ * its licensees as provided above.  However, if you add GPL Version 2 code
+ * and therefore, elected the GPL Version 2 license, then the option applies
+ * only if the new code is made subject to such option by the copyright
+ * holder.
+ */
+
+package com.sun.jersey.core.impl.provider.entity;
+
+import com.sun.jersey.core.provider.AbstractMessageReaderWriterProvider;
+import com.sun.jersey.core.util.ThrowHelper;
+import com.sun.jersey.spi.inject.Injectable;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.lang.annotation.Annotation;
+import java.lang.reflect.Type;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.Produces;
+import javax.ws.rs.WebApplicationException;
+import javax.ws.rs.core.Context;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.MultivaluedMap;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.transform.TransformerFactory;
+import javax.xml.transform.dom.DOMSource;
+import javax.xml.transform.stream.StreamResult;
+import org.w3c.dom.Document;
+import org.xml.sax.SAXException;
+
+/**
+ *
+ * @author Paul.Sandoz@Sun.Com
+ */
+@Produces({"application/xml", "text/xml", "*/*"})
+@Consumes({"application/xml", "text/xml", "*/*"})
+public final class DocumentProvider extends AbstractMessageReaderWriterProvider<Document> {
+    
+    // Delay construction of factory
+    private final Injectable<DocumentBuilderFactory> dbf;
+
+    // Delay construction of factory
+    private final Injectable<TransformerFactory> tf;
+
+    public DocumentProvider(@Context Injectable<DocumentBuilderFactory> dbf,
+            @Context Injectable<TransformerFactory> tf) {
+        this.dbf = dbf;
+        this.tf = tf;
+    }
+
+    public boolean isReadable(Class<?> type, Type genericType, Annotation[] annotations, MediaType mediaType) {
+        return Document.class == type;
+    }
+    
+    public Document readFrom(
+            Class<Document> type,
+            Type genericType, 
+            Annotation annotations[],
+            MediaType mediaType, 
+            MultivaluedMap<String, String> httpHeaders, 
+            InputStream entityStream) throws IOException {
+        try {
+            return dbf.getValue().newDocumentBuilder().parse(entityStream);
+        } catch (SAXException ex) {
+            throw new WebApplicationException(ex, 400);
+        } catch (ParserConfigurationException ex) {
+            throw ThrowHelper.withInitCause(ex,
+                    new IOException());
+        }
+    }
+
+    public boolean isWriteable(Class<?> type, Type genericType, Annotation[] annotations, MediaType mediaType) {
+        return Document.class.isAssignableFrom(type);
+    }
+    
+    public void writeTo(
+            Document t,
+            Class<?> type, 
+            Type genericType, 
+            Annotation annotations[], 
+            MediaType mediaType, 
+            MultivaluedMap<String, Object> httpHeaders,
+            OutputStream entityStream) throws IOException {
+        try {
+            StreamResult sr = new StreamResult(entityStream);
+            tf.getValue().newTransformer().transform(new DOMSource(t), sr);
+        } catch (Exception ex) {
+            ThrowHelper.withInitCause(ex, new IOException());
+        }
+    }
+}
