@@ -1,4 +1,7 @@
 release 1.1.2-ea (2009-09)
+- Fixed issue 331
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=331
+  Add support for de/serializing instances of org.w3c.dom.Document.
 - Fixed issue 326
   https://jersey.dev.java.net/issues/show_bug.cgi?id=326
   Work around bug 5087240 in the JDK:
